0032492: Coding - New warnings after integration fix for 27814